# GigachadCompiler

./: .gitignore  CMakeLists.txt  README.md  RelScriptLexer.g4  RelScriptParser.g4  main.cpp  sample.rels  test.rels
src/: RelScriptErrorListener.cpp  RelScriptErrorListener.h  RelScriptErrorStrategy.cpp  RelScriptErrorStrategy.h  RelScriptSemanticListener.cpp  RelScriptSemanticListener.h  SemanticErrorPrinter.cpp  SemanticErrorPrinter.hpp  Visitor.cpp  Visitor.hpp
src/scope/: Scope.cpp  Scope.hpp
src/syntax_error/: RelScriptErrorListener.h  RelScriptErrorStrategy.cpp  RelScriptErrorStrategy.h
src/types/: Column.c  Column.h  Constants.c  Constants.h  Row.c  Row.h  Table.c  Table.h  lib.c  lib.h  types.bc  utils.c  utils.h
